# fitsio

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.md  MANIFEST.in  README.md  azure-pipelines.yml  environment.yml  pyproject.toml  ruff.toml  setup.py  test.py  test_x.fits
cfitsio-4.2.0/: CMakeLists.txt  cfitsio-config.cmake.in  configure.in  eval.y
cfitsio-4.4.1-20240617/: CMakeLists.txt  configure  configure.in  fitsio.h  putkey.c
cfitsio-4.6.3/: .gitignore  CMakeLists.txt  cfileio.c  cfitsio.spec  configure  configure.ac  cookbook.out  drvrfile.c  drvrgsiftp.c  drvrmem.c  drvrnet.c  drvrsmem.c  eval.y  eval_f.c  eval_tab.h  eval_y.c  fitscore.c  fitsio.h  getcolj.c  group.c  grparser.c  histo.c  imcompress.c  iter_image.c  iter_var.c  putcol.c  putcold.c  putcolj.c  putkey.c
cfitsio-4.6.4/: .gitignore  CMakeLists.txt  Makefile.in  SECURITY.md  buffers.c  cfileio.c  configure  drvrgsiftp.c  drvrmem.c  drvrnet.c  eval.l  eval_l.c  eval_tab.h  fitscore.c  fitsio.h  fitsio2.h  getcold.c  getcolk.c  getcols.c  getcolsb.c  getcolui.c  getcoluj.c  getcoluk.c  imcompress.c  iter_b.c  longnam.h  modkey.c  putcol.c  putcole.c  region.c  run-testprog  vari.fits  zcompress.c
cfitsio3240/: README.MacOS  cfileio.c  cfitsio.doc  cfitsio.pc.in  cfitsio.ps  cfitsio.tex  cfitsio.toc  changes.txt  drvrfile.c  f77_wrap3.c  fitscore.c  fitsio.h  fpack.h  imcompress.c  testf77.out  testprog.out
cfitsio3280/: imcompress.c
cfitsio3280patch/: Makefile.in  drvrfile.c  drvrmem.c  imcompress.c
cfitsio3370/: CMakeLists.txt  configure  drvrfile.c  drvrmem.c  imcompress.c  putcols.c  simplerng.c
cfitsio3370patch/: configure.in  fpackutil.c  imcompress.c
cfitsio3430/: configure.in
cfitsio3430patch/: CMakeLists.txt  configure  configure.in  fitscore.c  fitsio.h  fpack.c  fpackutil.c  imcompress.c  putcols.c
cfitsio3470/: CMakeLists.txt  Makefile.in  cfitsio.pc.cmake  cfitsio.pc.in  configure  configure.in  f77_wrap1.c  fpack.c  fpackutil.c
cfitsio3490/: CMakeLists.txt  Makefile.in  cfitsio.pc.cmake  cfitsio.pc.in  (+5 more)
(+127 files in other folders)
